# aoc-2024-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
source/: aliases.hpp  common.hpp  concepts.hpp  helper.hpp  main.cpp  util.hpp
source/aoc/: CMakeLists.txt  aliases.hpp  common.hpp  concepts.hpp  main.cpp  meta.hpp  util.hpp
source/aoc/day/: 01.hpp  02.hpp  03.hpp  04.hpp  05.hpp  06.hpp  07.hpp  08.hpp  09.hpp  11.hpp  12.hpp  15.hpp  16.hpp  all.hpp  template.txt
source/aoc/util/: array2d.hpp  coordinate.hpp  iter2d.hpp  ranges.hpp  split.hpp
source/day/: 01.hpp  02.hpp  03.hpp  04.hpp  05.hpp  06.hpp  07.hpp  08.hpp  09.hpp  10.hpp  11.hpp  12.hpp  13.hpp  14.hpp  15.hpp  all.hpp  template.txt
source/util/: hash.hpp
source/vis/: CMakeLists.txt  day14.cpp  day15.cpp  vis-common.hpp
